<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <!-- Search, should appear as action button -->

<item android:id="@+id/action_delete_session"
      android:icon="@drawable/ic_delete_button"
      android:title="@string/activity_sessions_manager_delete"
      yourapp:showAsAction="ifRoom" />

<item android:id="@+id/action_edit_session"
      android:icon="@drawable/ic_edit"
      android:title="@string/activity_sessions_manager_edit_session_name"
      yourapp:showAsAction="ifRoom" />

<item android:id="@+id/action_add_session"
      android:icon="@drawable/ic_add"
      android:title="@string/activity_sessions_manager_add"
      yourapp:showAsAction="ifRoom" />

</menu>